prow/config/sail-operator/validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: istiod-default-validator
  labels:
    app: istiod
    release: istio
webhooks:
  - name: rev.validation.istio.io
    clientConfig:
      service:
        name: istiod
        namespace: istio-system
        path: /validate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQVAwa2VmOC9EenZKVkVXM2VFMDJiM3N3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU5UQTBNRE13T0RVMU5EaGFGdzB6TlRBMApNREV3T0RVMU5EaGFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ3dsOFpsUThnZSs4RDh4R0pocTI3M1FybmFBNEFJNnpWbXZ4ekwKbmtNSWxsZ2NIcjhmUitwSVRUQWZ0YUY1TTdtOHR4SmliMzBRVkZsK1ZmallyNEkyTWRWcVJ5SlFPem1mWUxtaQpzYm9FSEhKQVRO [...]
    rules:
      - apiGroups: ["security.istio.io", "networking.istio.io", "telemetry.istio.io", "extensions.istio.io"]
        apiVersions: ["*"]
        operations: ["CREATE", "UPDATE"]
        resources: ["*"]
        scope: "*"
    failurePolicy: Fail
    matchPolicy: Equivalent
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 10
